--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   font-family: "Gamja Flower", cursive;
   font-size: 48px;
   font-weight: 1000;
+  color: white;
 }
 
 input {
@@ -33,5 +34,14 @@ li {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
+}
+
+/* login */
+.login-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
